--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -1,22 +1,112 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}Homepage{% endblock %}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>portfolio</title>
+    <link 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"
+    />
 
-  <body>
-    <h1>Hello, world!</h1>
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.fluid.classless.min.css"
+    />
 
-    
-    {% block template %}
-    {% endblock %}
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.colors.min.css"
+    />
 
+    <style>
+        .flex-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            /* margin-top: 50px;  */
+        }
+
+        #floating-ball {
+            width: 60px;
+            height: 60px;
+            background: none;
+            border: 1px solid grey;
+            border-radius: 50%;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            margin: -10px 0 0 -10px;
+            pointer-events: none;
+        }
+
+        .blur {
+            backdrop-filter: blur(10px);
+        }
+
+        .shadow-b {
+            -webkit-box-shadow: 0px 4px 8px 2px rgba(0,0,0,0.12);
+            -moz-box-shadow: 0px 4px 8px 2px rgba(0,0,0,0.12);
+            box-shadow: 0px 4px 8px 2px rgba(0,0,0,0.12);
+        }
+
+    </style>
+
+</head>
+
+<body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
-</html>
+    {% block content %}{% endblock %}
+</body>
 
-{% include "footer.html" %}
+<script>
+    // Floating-ball animation
+    // Credit is given to the Codegrid channel on YouTube for the inspiration.
+    // 2024-03-08 https://www.youtube.com/watch?v=NSmZM89YCfE 
+
+    let xmouse, ymouse
+    const ball = document.getElementById('floating-ball')
+    
+    const handleMouseMove = (event) => {
+        xmouse = event.clientX || event.pageX
+        ymouse = event.clientY || event.pageY
+    }
+
+    document.addEventListener('mousemove', handleMouseMove)
+
+    let x = void 0
+    let y = void 0
+    let dx = void 0
+    let dy = void 0
+    let tx = void 0
+    let ty = void 0
+    let key = -1
+
+    const followMouse = () => {
+        window.requestAnimationFrame(followMouse);
+
+        if (!x || !y) {
+            x = xmouse
+            y = ymouse
+        } else {
+            dx = (xmouse - x) * 0.125
+            dy = (ymouse - y) * 0.125
+            if (Math.abs(dx) + Math.abs(dy) < 0.1) {
+                x = xmouse
+                y = ymouse
+            } else {
+                x += dx
+                y += dy
+            }
+        }
+        ball.style.left = x + 'px'
+        ball.style.top = y + 'px'
+    }
+
+    window.requestAnimationFrame(followMouse);
+
+</script>
+
+</html>
 
