--- a/server/templates/footer.html
+++ b/server/templates/footer.html
@@ -1,10 +1,11 @@
-<footer class="py-3 my-4">
-    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"></a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"></a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"></a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"></a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"></a></li>
-    </ul>
-    <p class="text-center text-body-secondary">Have a nice day</p>
-  </footer>
+<!-- FOOTER -->
+
+<div class="d-flex mt-0 border border-dark"> 
+    <div class="container">
+        <footer class="py-3 my-0"> 
+                <p class="text-center text-body-secondary">Best wishes</p> 
+        </footer>
+    </div> 
+</div>
+
+<!-- FOOTER -->
