--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -1,19 +1,18 @@
 {% extends 'base.html' %}
-
-  {% block title %} Portfolio {% endblock %}
-
-  {% block template %}
-
-    {% if project %}
+{% load static %}
 
 
-        <h2><a href="server/apps/portfolio/{{project.id}}/">{{ project.title }}</h2>
-        <h3>{{ project.subtitle }}</h3>
-        <p> {{project.text }} </p>
+{% block content %}
 
+{% include 'navbar.html' %}
 
-    {% endif %}
+{% include 'launch_page.html' %}
 
+{% include 'skills.html' %}
 
-  {% endblock %}
+{% include 'projects.html' %}
 
+{% include 'footer.html' %}
+
+    
+{% endblock %}
