Redesign skill section

--- a/server/templates/navbar.html
+++ b/server/templates/navbar.html
@@ -1,12 +1,12 @@
 {% load static %}
 
-<nav class="mb-3 position-absolute top-0 start-0 w-100 z-1 blur shadow-b">
+<nav class="mb-3 position-absolute top-0 start-0 w-100 z-1 blur shadow-b pico-background-zinc-850 bg-opacity-50">
     <div class="container d-flex flex-wrap align-items-center py-3 px-0">
         <ul class="nav me-auto">
             <li class="nav-item">
                 <a href="#" class="fs-4 nav-link link-body-emphasis active" aria-current="page">
                     <!-- <h2 class="pico-color-violet-350 m-0">Hi :)</h2> -->
-                    <img style="height: 36px; width: 36px;" class="pico-color-violet-350 " src="{% static 'icons/game-icons_frog.svg' %}" />
+                    <img style="height: 36px; width: 36px;" src="{% static 'icons/game-icons_frog.svg' %}" />
                 </a>
             </li>
         </ul>
@@ -23,4 +23,5 @@
                 </a>
             </li>
         </ul>
+    </div>
 </nav>
