--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -31,24 +31,34 @@
         #floating-ball {
             width: 60px;
             height: 60px;
-            background: none;
+            /* background: white; */
             border: 1px solid grey;
             border-radius: 50%;
-            position: absolute;
+            position: fixed;
             left: 50%;
             top: 50%;
             margin: -10px 0 0 -10px;
             pointer-events: none;
+            mix-blend-mode: difference;
+            filter: invert(1);
+        }
+
+        .invert:hover ~ #floating-ball {
+            transform: scale(6);
         }
 
         .blur {
-            backdrop-filter: blur(10px);
+            backdrop-filter: blur(5px);
         }
 
         .shadow-b {
             -webkit-box-shadow: 0px 4px 8px 2px rgba(0,0,0,0.12);
             -moz-box-shadow: 0px 4px 8px 2px rgba(0,0,0,0.12);
             box-shadow: 0px 4px 8px 2px rgba(0,0,0,0.12);
+        }
+
+        .container h2 {
+            margin-top: 8rem;
         }
 
     </style>
@@ -100,8 +110,8 @@
                 y += dy
             }
         }
-        ball.style.left = x + 'px'
-        ball.style.top = y + 'px'
+        ball.style.left = x - 20 + 'px'
+        ball.style.top = y - 20 + 'px'
     }
 
     window.requestAnimationFrame(followMouse);
