--- a/server/templates/skills.html
+++ b/server/templates/skills.html
@@ -1,107 +1,133 @@
 {% load static %}
 <!-- SKILLS -->
 
-<div id='skills' class="d-flex mt-4 border border-dark min-vh-100">
+<div id='skills' class="d-flex min-vh-100 px-2 px-sm-5">
 
-  <div class="container px-4 py-4" id="icon-grid">
+  <div class="container" id="icon-grid">
 
       <h2 class="pb-2 border-bottom">Skillset</h2>
   
-      <div class="row row-cols-1 row-cols-sm-3 row-cols-lg-4  py-5">
-          <div class="d-flex mt-5">
+      <div class="row row-cols-1 row-cols-sm-3 row-cols-lg-4 py-5 mb-4">
+          <div class="d-flex py-3 py-sm-5">
           <!-- <div class="d-flex mt-5 border border-dark"> -->
              
                   <div class="col d-flex flex-column align-items-start">
 
                       <!-- <div class="d-flex flex-row mb-3"></div> -->
-                          <div>
-                              <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Language</h3>
-                              <p>Python</p>
+                            <div class="d-flex flex-sm-column align-items-center align-items-sm-start" style="gap: 1.5rem">
+                                <img style="height: 4rem; width: 4rem;" src="{% static 'icons/Language_light.png' %}" />
+                                <span>
+                                    <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Language</h3>
+                                    <p class="mb-0">Python</p>
+                                  </span>
                               <!-- <div class="icon"><img src="{% static 'icons/python.svg' %}" alt="python icon"></div> -->
-                          </div>
+                            </div>
                       
                   </div>
               
           </div>
 
           <!-- <div class="d-flex mt-5 border border-dark"> -->
-          <div class="d-flex mt-5">
+          <div class="d-flex py-3 py-sm-5">
               
               <div class="col d-flex flex-column align-items-start">
                     
                   <!-- <div class="d-flex flex-row mb-3"></div> -->
-                      <div>
-                          <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Frameworks</h3>
-                          <p>Django, DRF, Flask, Bootstrap</p>
+                      <div class="d-flex flex-sm-column align-items-center align-items-sm-start" style="gap: 1.5rem">
+                          <img style="height: 4rem; width: 4rem;" src="{% static 'icons/Framework.png' %}" />
+                          <span>
+                            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Frameworks</h3>
+                            <p class="mb-0">Django, DRF, Flask, Bootstrap</p>
+                          </span>
                       </div>
               </div>
 
           </div>
-          <div class="d-flex mt-5">
+          <div class="d-flex py-3 py-sm-5">
             
           <!-- <div class="d-flex mt-5 border border-dark"> -->
 
               <div class="col d-flex flex-column align-items-start">
                   <!-- <div class="d-flex flex-row mb-3"></div> -->
-                      <div>
-                          <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Software Testing</h3>
-                          <p>Pytest, Postman</p>
+                      <div class="d-flex flex-sm-column align-items-center align-items-sm-start" style="gap: 1.5rem">
+                          <img style="height: 4rem; width: 4rem;" src="{% static 'icons/Testing.png' %}" />
+                          <span>
+                            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Software Testing</h3>
+                            <p class="mb-0">Pytest, Postman</p>
+                          </span>
                       </div>
               </div>
           </div>   
       
-          <div class="d-flex mt-5">
+          <div class="d-flex py-3 py-sm-5">
           <!-- <div class="d-flex mt-5 border border-dark"> -->
               <div class="col d-flex flex-column align-items-start">
                   <!-- <div class="d-flex flex-row mb-3"></div> -->
-                      <div>
-                          <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Database</h3>
-                          <p>SQL, SQLAlchemy</p>
+                      <div class="d-flex flex-sm-column align-items-center align-items-sm-start" style="gap: 1.5rem">
+                          <img style="height: 4rem; width: 4rem;" src="{% static 'icons/Sql.png' %}" />
+                          <span>
+                            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Database</h3>
+                            <p class="mb-0">SQL, SQLAlchemy</p>
+                          </span>
                       </div>
               </div>
           </div>
-          <div class="d-flex mt-5">
+          <div class="d-flex py-3 py-sm-5">
           <!-- <div class="d-flex mt-5 border border-dark"> -->
               <div class="col d-flex flex-column align-items-start">
                   <!-- <div class="d-flex flex-row mb-3"></div> -->
-                      <div>
-                          <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Data science analysing</h3>
-                          <p>Pandas, NumPy</p>
-                      </div>
-              </div>
-          </div>
-
-          <div class="d-flex mt-5">
-          <!-- <div class="d-flex mt-5 border border-dark"> -->
-              <div class="col d-flex flex-column align-items-start">
-                  <!-- <div class="d-flex flex-row mb-3"></div> -->
-                      <div>
-                          <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Data science visualisation 
-                          </h3>
-                          <p>Matplotlib, Plotly, Scikit learn, Seaborn</p>
-                      </div>
-              </div>
-          </div>
-          <div class="d-flex mt-5">
-          <!-- <div class="d-flex mt-5 border border-dark"> -->
-              <div class="col d-flex flex-column align-items-start">
-                  <!-- <div class="d-flex flex-row mb-3"></div> -->
-                      <div>
-                          <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Version Control</h3>
-                          <p>Git, GitHub</p>
+                      <div class="d-flex flex-sm-column align-items-center align-items-sm-start" style="gap: 1.5rem">
+                          <img style="height: 4rem; width: 4rem;" src="{% static 'icons/Data_science.png' %}" />
+                          <span>
+                            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Data science analysing</h3>
+                            <p class="mb-0">Pandas, NumPy</p>
+                          </span>
                       </div>
               </div>
           </div>
 
+          <div class="d-flex py-3 py-sm-5">
           <!-- <div class="d-flex mt-5 border border-dark"> -->
-              <!-- <div class="col d-flex align-items-start"> -->
-                  <!-- <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#tools"></use></svg> -->
-                  <!-- <div> -->
-                  <!-- <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">REST API, Postman</h3> -->
-                  <!-- <p>Paragraph of text beneath the heading to explain the heading.</p> -->
-                  <!-- </div> -->
-              <!-- </div> -->
-          <!-- </div> -->
+              <div class="col d-flex flex-column align-items-start">
+                  <!-- <div class="d-flex flex-row mb-3"></div> -->
+                      <div class="d-flex flex-sm-column align-items-center align-items-sm-start" style="gap: 1.5rem">
+                          <img style="height: 4rem; width: 4rem;" src="{% static 'icons/Plotting.png' %}" />
+                          <span>
+                            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Data science visualisation 
+                            </h3>
+                          <p class="mb-0">Matplotlib, Plotly, Scikit learn, Seaborn</p>
+                          </span>
+                      </div>
+              </div>
+          </div>
+
+          <div class="d-flex py-3 py-sm-5">
+          <!-- <div class="d-flex mt-5 border border-dark"> -->
+              <div class="col d-flex flex-column align-items-start">
+                  <!-- <div class="d-flex flex-row mb-3"></div> -->
+                      <div class="d-flex flex-sm-column align-items-center align-items-sm-start" style="gap: 1.5rem">
+                          <img style="height: 4rem; width: 4rem;" src="{% static 'icons/Git.png' %}" />
+                          <span>
+                            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Version Control</h3>
+                            <p class="mb-0">Git, GitHub</p>
+                          </span>
+                      </div>
+              </div>
+          </div>
+
+          <div class="d-flex py-3 py-sm-5">
+          <!-- <div class="d-flex mt-5 border border-dark"> -->
+              <div class="col d-flex flex-column align-items-start">
+                  <!-- <div class="d-flex flex-row mb-3"></div> -->
+                      <div class="d-flex flex-sm-column align-items-center align-items-sm-start" style="gap: 1.5rem">
+                          <img style="height: 4rem; width: 4rem;" src="{% static 'icons/Devops.png' %}" />
+                          <span>
+                            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">DevOps</h3>
+                            <p class="mb-0">Docker, Docker compose</p>
+                          </span>
+                      </div>
+              </div>
+          </div>
       </div>
   </div>
 
