Restyle project section

--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -61,6 +61,18 @@
             margin-top: 8rem;
         }
 
+        .project-hero {
+            height: 24rem;
+            width: 100%;
+            flex-shrink: 0;
+            object-fit: cover;
+            overflow: visible;
+            float: right;
+            position: relative;
+            right: -240px;
+            top: 0;
+        }
+
     </style>
 
 </head>
