--- a/server/templates/launch_page.html
+++ b/server/templates/launch_page.html
@@ -31,28 +31,28 @@
                 <!-- <span class="mx-4 px-3 py-3 border border-dark"> -->
                 <span class="mx-2 mx-sm-4 px-3 py-3 flex-shrink-0">
                     <a href="https://github.com/poisonfrog13">
-                        <div class="icon"><img src="{% static 'icons/github.svg' %}" alt="github icon"></div>
+                        <div class="icon"><img src="{% static 'icons/github.svg' %}" alt="github icon" style="height: 32px; width: auto;"></div>
                     </a>
                 </span>
 
                 <!-- <span class="mx-4 px-3 py-3 border border-dark"> -->
                 <span class="mx-2 mx-sm-4 px-3 py-3 flex-shrink-0">
                     <a href="#">
-                        <div class="icon"><img src="{% static 'icons/linkedin.svg' %}" alt="linkedin icon"></div>
+                        <div class="icon"><img src="{% static 'icons/linkedin.svg' %}" alt="linkedin icon" style="height: 32px; width: auto;"></div>
                     </a>
                 </span>
 
                 <!-- <span class="mx-4 px-3 py-3 border border-dark"> -->
                 <span class="mx-2 mx-sm-4 px-3 py-3 flex-shrink-0">
                     <a href="#">
-                        <div class="icon"><img src="{% static 'icons/document.svg' %}" alt="resume icon"></div>
+                        <div class="icon"><img src="{% static 'icons/document.svg' %}" alt="resume icon" style="height: 32px; width: auto;"></div>
                     </a>
                 </span>
 
                 <!-- <span class="mx-4 px-3 py-3 border border-dark"> -->
                 <span class="mx-2 mx-sm-4 px-3 py-3 flex-shrink-0">
                     <a href="#">
-                        <div class="icon"><img src="{% static 'icons/email.svg' %}" alt="send email icon"></div>
+                        <div class="icon"><img src="{% static 'icons/email.svg' %}" alt="send email icon" style="height: 32px; width: auto;"></div>
                     </a>
                 </span>
 
