--- a/server/templates/projects.html
+++ b/server/templates/projects.html
@@ -5,7 +5,7 @@
 <div id='projects' class="d-flex mt-4 pico-background-zinc-900 px-4" style="min-height: 50vh;">
   <div class="container" style="padding: 8rem 0 8rem 0;">
     <h2 class="pb-2 mt-0 border-bottom pico-color-sand-50 w-100">Projects</h2>
-    <div class="d-flex" style="gap: 2rem">
+    <div class="d-flex gap-sm-5">
       <div class="w-50">
         <p class="pico-color-grey-350">I am always looking for projects which challenge me and stretch my skills. I believe that there is no better teacher than failure. But don't tell that to my mentor ;)</p>
       </div>
