Finishing a 1st vresion of website

--- a/server/templates/launch_page.html
+++ b/server/templates/launch_page.html
@@ -57,10 +57,12 @@
                 </span>
 
             </div>
-
-
-
-
+            <div id="down-icon" style="margin-top: 2.5rem !important;">
+                <a href="#skills">
+                    <img src="{% static 'icons/down_icon_dark.png' %}" alt="resume icon" style="height: 48px; width: auto;">
+                    <!-- <img src="{% static 'icons/down_icon_dark_2.png' %}" alt="resume icon" style="height: 48px; width: auto;"> -->
+                </a>
+            </div>
 
         </div>
     </div>
