--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -73,6 +73,21 @@
             top: 0;
         }
 
+        #down-icon {
+            animation: bounce 1s infinite;
+        }
+
+        @keyframes bounce {
+            0%, 100% {
+                transform: translateY(-25%);
+                animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+            }
+            50% {
+                transform: translateY(0);
+                animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+            }
+        }        
+
     </style>
 
 </head>
