--- a/server/templates/skills.html
+++ b/server/templates/skills.html
@@ -7,8 +7,8 @@
 
       <h2 class="pb-2 border-bottom">Skillset</h2>
   
-      <div class="row row-cols-1 row-cols-sm-3 row-cols-lg-4 py-5 mb-4">
-          <div class="d-flex py-3 py-sm-5">
+      <div class="row row-cols-1 row-cols-sm-3 row-cols-lg-4 py-0 mb-4">
+          <div class="d-flex py-0 py-sm-5">
           <!-- <div class="d-flex mt-5 border border-dark"> -->
              
                   <div class="col d-flex flex-column align-items-start">
@@ -67,7 +67,7 @@
                           <img style="height: 4rem; width: 4rem;" src="{% static 'icons/Sql.png' %}" />
                           <span>
                             <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Database</h3>
-                            <p class="mb-0">SQL, SQLAlchemy</p>
+                            <p class="mb-0">SQL, SQLAlchemy, PostgreSQL</p>
                           </span>
                       </div>
               </div>
