Add docker-compose for orchestration

--- a/server/templates/launch_page.html
+++ b/server/templates/launch_page.html
@@ -37,21 +37,22 @@
 
                 <!-- <span class="mx-4 px-3 py-3 border border-dark"> -->
                 <span class="mx-2 mx-sm-4 px-3 py-3 flex-shrink-0">
-                    <a href="#">
+                    <a href="https://www.linkedin.com/in/lena-gut-6b2b5229a/">
                         <div class="icon"><img src="{% static 'icons/linkedin.svg' %}" alt="linkedin icon" style="height: 32px; width: auto;"></div>
                     </a>
                 </span>
 
                 <!-- <span class="mx-4 px-3 py-3 border border-dark"> -->
                 <span class="mx-2 mx-sm-4 px-3 py-3 flex-shrink-0">
-                    <a href="#">
+                    <a href="https://docs.google.com/document/d/1SSQz8-KZiYV26Wv3bkbOZRE9M_JMEQUmer-LGFjP4AA/edit?usp=drive_link">
                         <div class="icon"><img src="{% static 'icons/document.svg' %}" alt="resume icon" style="height: 32px; width: auto;"></div>
                     </a>
                 </span>
 
+                     <!-- <a href=mailto:“disha@uplers.com”></a> -->
                 <!-- <span class="mx-4 px-3 py-3 border border-dark"> -->
                 <span class="mx-2 mx-sm-4 px-3 py-3 flex-shrink-0">
-                    <a href="#">
+                    <a href="mailto:lena.gut1993@gmail.com">
                         <div class="icon"><img src="{% static 'icons/email.svg' %}" alt="send email icon" style="height: 32px; width: auto;"></div>
                     </a>
                 </span>
