--- a/server/templates/footer.html
+++ b/server/templates/footer.html
@@ -11,13 +11,13 @@
                 <a href="https://github.com/poisonfrog13">
                     <div class="icon"><img src="{% static 'icons/github.svg' %}" alt="github icon"></div>
                 </a>
-                <a href="#">
+                <a href="https://www.linkedin.com/in/olena-gut-6b2b5229a/">
                     <div class="icon"><img src="{% static 'icons/linkedin.svg' %}" alt="linkedin icon"></div>
                 </a>
-                <a href="#">
+                <a href="https://docs.google.com/document/d/1ST2OUhqcSM2LT11rSoOuYXBm4rEsFhxBQ1bEe-weyXQ/edit?usp=sharing">
                     <div class="icon"><img src="{% static 'icons/document.svg' %}" alt="resume icon"></div>
                 </a>
-                <a href="#">
+                <a href="mailto:lena.gut1993@gmail.com">
                     <div class="icon"><img src="{% static 'icons/email.svg' %}" alt="send email icon"></div>
                 </a>                
         </footer>
