--- a/server/templates/launch_page.html
+++ b/server/templates/launch_page.html
@@ -37,14 +37,14 @@
 
                 <!-- <span class="mx-4 px-3 py-3 border border-dark"> -->
                 <span class="mx-2 mx-sm-4 px-3 py-3 flex-shrink-0">
-                    <a href="https://www.linkedin.com/in/lena-gut-6b2b5229a/">
+                    <a href="https://www.linkedin.com/in/olena-gut-6b2b5229a/">
                         <div class="icon"><img src="{% static 'icons/linkedin.svg' %}" alt="linkedin icon" style="height: 32px; width: auto;"></div>
                     </a>
                 </span>
 
                 <!-- <span class="mx-4 px-3 py-3 border border-dark"> -->
                 <span class="mx-2 mx-sm-4 px-3 py-3 flex-shrink-0">
-                    <a href="https://docs.google.com/document/d/1SSQz8-KZiYV26Wv3bkbOZRE9M_JMEQUmer-LGFjP4AA/edit?usp=drive_link">
+                    <a href="https://docs.google.com/document/d/1ST2OUhqcSM2LT11rSoOuYXBm4rEsFhxBQ1bEe-weyXQ/edit?usp=sharing">
                         <div class="icon"><img src="{% static 'icons/document.svg' %}" alt="resume icon" style="height: 32px; width: auto;"></div>
                     </a>
                 </span>
