--- a/server/templates/launch_page.html
+++ b/server/templates/launch_page.html
@@ -12,9 +12,9 @@
 
     <!-- HERO SECTION + LINKS -->
     <div class="flex-container px-2 px-sm-5">
-        <div class="px-0 py-5 my-5 mt-3 pt-5 text-center">
+        <div class="px-0 py-5 my-5 mt-5 pt-5 text-center">
 
-            <h1 class="display-5 fw-bold pico-color-sand-50 text-capitalize invert">Limitless creativity with rules</h1>
+            <h1 class="display-5 pt-5 fw-bold pico-color-sand-50 text-capitalize invert">Limitless creativity with rules</h1>
             <!-- <h1 class="pico-color-amber-200">Pink title</h1> -->
             <div class="col-lg-6 mx-auto">
                 <p class="lead mb-3 pico-color-grey-350 invert">
