--- a/server/templates/projects.html
+++ b/server/templates/projects.html
@@ -71,7 +71,7 @@
                 width="64" height="64" loading="lazy">
             </div>
 
-            <p class="text-body-secondary">The backend built with Django and DRF supports fundamental CRUD operations
+            <p class="text-body-secondary">The backend was built with Django and DRF, supports fundamental CRUD operations
               for habits and daily records, encompassing both list and detail views.</p>
           </div>
           <div class="col d-flex flex-sm-column gap-4">
@@ -80,7 +80,7 @@
               <img src="{% static '/icons/curly-brackets.svg' %}" class="d-block block img-fluid"
                 alt="Screen of code" width="64" height="64" loading="lazy">
             </div>
-            <p class="text-body-secondary">The app built features a REST API providing JSON data and is intended to be
+            <p class="text-body-secondary">The app provides a REST API providing JSON data and is intended to be
               consumed by a front end web application.</p>
           </div>
 
