--- a/server/templates/skills.html
+++ b/server/templates/skills.html
@@ -5,7 +5,7 @@
 
   <div class="container" id="icon-grid">
 
-      <h2 class="pb-2 border-bottom">Skillset</h2>
+      <h2 class="pb-2 py-0 border-bottom mt-5">Skillset</h2>
   
       <div class="row row-cols-1 row-cols-sm-3 row-cols-lg-4 py-0 mb-4">
           <div class="d-flex py-0 py-sm-5">
